2000-05-30  Kevin McCarthy  <kevin@perldap.org>

	* Makefile.PL: Added fix so API.xs compiles under Perl 5.6
	(POLLUTE=>1)

1999-09-07  Leif Hedstrom  <leif@perldap.org>

	* API.xs (avref2charptrptr): Fixed potential core dump, if the
	argument passed wasn't a proper array.
	(avref2berptrptr): Ditto.

1999-09-06  Leif Hedstrom  <leif@perldap.org>

	* Conn.pm (search): Removed $res and $resv, set the internal data
	element directly.
	(searchURL): Ditto.

1999-08-25  John Kristian <kristian@netscape.com>

	* Entry.pm (printLDIF): Bug fix.

	* LDIF.pm: Cleaned out memory leaks.

1999-08-24  Leif Hedstrom  <leif@netscape.com>

	* Merged v1.3.x into trunk, tagged it as v1.4, and released it!

1999-08-19  Leif Hedstrom  <leif@netscape.com>

	* Changed internal version numbering again, just called this plain
	v1.4.

	* Entry.pm (FIRSTKEY): Bug fix, we'd crap out if there are no
	attributes in the returned entry.
	(NEXTKEY): Ditto.

1999-08-18  Leif Hedstrom  <leif@netscape.com>

	* Set version number to v1.4! Woohoo! Also tagged it as v1.3.4,
	last "development" release.

1999-08-17  Leif Hedstrom  <leif@netscape.com>

	* Makefile.PL: Fixes for Windows/NT, cleaned out some code etc.
	(MY::postamble): Support for "make html".

	* MANIFEST: Updated with all new files etc.

	* test.pl: Renamed to oldtest.pl, to avoid "make test" to fail.

1999-08-16  Kevin McCarthy  <kmccarth@perldap.org> and Leif Hedstrom

	* API.xs: Cleaned most all the memory allocation changes, we are
	changing it to use the LDAP_OPT_MEMALLOC_FN_PTRS option in the
	C-SDK instead (much cleaner!).
	(perldap_init): New function, set up the memory management
	handlers. This is called when the API module is loaded.
	(perldap_malloc): New function, our memory management method(s).
	(perldap_calloc): Ditto.
	(perldap_realloc): Ditto.
	(perldap_free): Ditto.

1999-08-16  Kevin McCarthy  <kmccarth@perldap.org>

	* API.xs: Cleaned up prototypes, changed strdup() to use a